--- a/portfolio1.css
+++ b/portfolio1.css
@@ -155,6 +155,15 @@ ul li a i {
  	font-size: 18px;
  	/*text-indent: 80px;*/
  }
+ 
+ #mailto {
+ 	color: black;
+ 	padding: 9px;
+ 	vertical-align:	middle;
+ 	padding-left: 40px;
+ 	font-size: 18px;
+ 	/*text-indent: 80px;*/
+ }
 
 ul img {
     width: 50px;
